chore: Respect du format de nommage des variable
