# src/dto/author.dto.ts
@@ -1,5 +1,5 @@
 export interface AuthorDTO {
   id?: number;
-  first_name: string;
-  last_name: string;
+  firstName: string;
+  lastName: string;
 }
