# src/dto/book.dto.ts
@@ -3,7 +3,7 @@ import { AuthorDTO } from "./author.dto";
 export interface BookDTO {
   id?: number;
   title: string;
-  publish_year: number;
+  publishYear: number;
   author?: AuthorDTO;
   isbn: string;
 }
